# no-panics

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: test.rs
tests/compiletest/: mod.rs
tests/ui/: trait-fn.rs
