[package]
name = "no-panics"
version = "0.0.1"
description = "Attribute macro to require that the compiler prove a function can't ever panic."
documentation = "https://docs.rs/no-panics"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brodybits/no-panics"
rust-version = "1.39"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.3"
trybuild = { version = "1.0.77", features = ["diff"] }
